...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal">

        <!-- Student Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_student_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="Student"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/colorPrimaryDark"
...
